# OpenGL-Exercises

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROJECT_SUMMARY.md  README.md  algorithm.md  readme.txt  shader.md  src.md
.claude/: settings.local.json
OpenGL/: CMakeLists.txt  OpenGL.cpp
models/: arm.glb  arrow.glb  bread.glb  emerald.glb  player.glb  skeleton.glb  sword.glb  torch.glb  zombie.glb
shaders/: blur.frag  debug.frag  debug.vert  fullscreen.vert  g_buffer.frag  g_buffer.vert  g_buffer_skinned.vert  godrays.frag  grid.frag  grid.vert  hdr_compose.frag  model.frag  model.vert  rain.frag  rain.vert  shadow.frag  shadow.vert  shadow_skinned.vert  sky.frag  sky.vert  ssao.frag  ssao_blur.frag  ui.frag  ui.vert
src/: Animation.cpp  Animation.h  Arrow.cpp  Arrow.h  Camera.cpp  Camera.h  CollisionWorld.cpp  CollisionWorld.h  Enemy.cpp  Enemy.h  FPSCamera.cpp  FPSCamera.h  FontRenderer.cpp  FontRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  font_baker.c  font_baker.h  main.cpp
